[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eml2pdf"
version = "0.1.0"
description = "Convert .eml email files to PDF (header, HTML/plain body, inline images, attachment list)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "fiendwbc" }]
keywords = ["eml", "email", "pdf", "converter", "wkhtmltopdf", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
# No third-party Python dependencies — only the standard library.
# Requires the external `wkhtmltopdf` binary to be installed and on PATH.
dependencies = []

[project.urls]
Homepage = "https://github.com/fiendwbc/eml2pdf"
Repository = "https://github.com/fiendwbc/eml2pdf"
Issues = "https://github.com/fiendwbc/eml2pdf/issues"

[project.scripts]
eml2pdf = "eml2pdf:main"

[tool.hatch.build.targets.wheel]
include = ["eml2pdf.py"]

[tool.hatch.build.targets.sdist]
include = ["eml2pdf.py", "README.md", "README.zh-CN.md", "LICENSE"]
